--- a/index.html
+++ b/index.html
@@ -8,13 +8,61 @@
   </head>
   <body>
 
+    <div class="container-fluid" style="padding:0px;">
 
 
-    <div class="section-header">
-
-      <h1><u>FUN WITH "PING-PONG"</u></h1>
+      <h1>FUN WITH "PING-PONG"</h1>
 
     </div>
+<div class="container">
+
+
+    <div class="row">
+
+      <div class="col-md-4">
+
+        <h2>About Ping Pong</h2><br>
+        <h4>Created by:</h4><br>
+        <p>Victor Njuguna</p><br>
+        <h4>GitHub Username/URL:</h4><br>
+        <p>victor8504</p><br>
+        <h4>Level 2 Test for:</h4><br>
+        <p>Java</p>
+
+      </div>
+
+      <div class="col-md-8">
+        <h2>Let's play!</h2><br>
+        <h4>Rules:</h4><br>
+        <p>Ping Pong will court up to your number from one with the following exceptions;</p>
+          <ol>
+            <li>Numbers divisible by 3 become "ping"</li>
+            <li>Numbers divisible by 5 become "pong"</li>
+            <li>Numbers divisible by 3 and 5 become "ping-pong"</li>
+          </ol>
+
+      <form id="blank">
+
+
+        <label for="no">Enter your number here:</label>
+        <input id="no"  type="text">
+
+
+
+      <button type="submit" class="btn">Check it out!</button>
+
+      </form>
+
+      <div id="output">
+        <ul class="results">
+
+        </ul>
+      </div>
+
+      </div>
+    </div>
+
+</div>
 
 
     <script src="js/jquery.js"></script>
