--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Ping-Pong</title>
-    <link href="css/bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
-  </head>
-  <body>
 
-    <div class="container-fluid" style="padding:0px;">
+<head>
+  <meta charset="utf-8">
+  <title>Ping-Pong</title>
+  <link href="css/bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+</head>
 
+<body>
 
-      <h1>FUN WITH "PING-PONG"</h1>
+  <div class="container">
 
-    </div>
-<div class="container">
+    <div class="jumbotron">
 
+    <h1>FUN WITH "PING-PONG"</h1>
+
+  </div>
 
     <div class="row">
 
@@ -29,44 +30,45 @@
         <h4>Level 2 Test for:</h4><br>
         <p>Java</p>
 
-      </div>
+    </div>
 
       <div class="col-md-8">
         <h2>Let's play!</h2><br>
         <h4>Rules:</h4><br>
         <p>Ping Pong will court up to your number from one with the following exceptions;</p>
-          <ol>
-            <li>Numbers divisible by 3 become "ping"</li>
-            <li>Numbers divisible by 5 become "pong"</li>
-            <li>Numbers divisible by 3 and 5 become "ping-pong"</li>
-          </ol>
+        <ol>
+          <li>Numbers divisible by 3 become "ping"</li>
+          <li>Numbers divisible by 5 become "pong"</li>
+          <li>Numbers divisible by 3 and 5 become "ping-pong"</li>
+        </ol>
 
-      <form id="blank">
-
-
-        <label for="no">Enter your number here:</label>
-        <input id="no"  type="text">
+        <form id="blank">
 
 
+          <label for="no">Enter your number here:</label>
+          <input id="no" type="text">
 
-      <button type="submit" class="btn">Check it out!</button>
 
-      </form>
 
-      <div id="output">
-        <ul class="results">
+          <button type="submit" class="btn">Check it out!</button>
 
-        </ul>
-      </div>
+        </form>
+
+        <div id="output">
+          <ul class="results">
+
+          </ul>
+        </div>
 
       </div>
     </div>
 
-</div>
+  </div>
 
 
-    <script src="js/jquery.js"></script>
-    <script src="js/scripts.js"></script>
+  <script src="js/jquery.js"></script>
+  <script src="js/scripts.js"></script>
 
-  </body>
+</body>
+
 </html>
